Quorum3/Library/Tests/Templating/Fail/B_DoubleTest.quorum
class B<Type1, Type2> is A<Type1>
end